--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 	<script src="../node_modules/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 	<script src="../node_modules/ngstorage/ngStorage.min.js"></script>
 	<script src="../node_modules/toastr/build/toastr.min.js"></script>
-
+	<script src="../node_modules/chart.js/dist/Chart.min.js"></script>
 
 	<!--Mis scritps-->
 	<script src="../public/app/app.js"></script>
